test1/force-app/main/default/objects/Food__c/fields/Food_Type__c.field-meta.xml
<CustomField>
    <fullName>Food_Type__c</fullName>
    <label>Food Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veg</fullName>
            </value>
            <value>
                <fullName>Non Veg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>