test1/force-app/main/default/objects/Food__c/fields/Non_Veg__c.field-meta.xml
<CustomField>
    <fullName>Non_Veg__c</fullName>
    <label>Non Veg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chicken</fullName>
            </value>
            <value>
                <fullName>Mutton</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>