test1/force-app/main/default/objects/Food__c/fields/Veg__c.field-meta.xml
<CustomField>
    <fullName>Veg__c</fullName>
    <label>Veg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paneer</fullName>
            </value>
            <value>
                <fullName>Mushroom</fullName>
            </value>
            <value>
                <fullName>Gobi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>