test1/force-app/main/default/objects/Food__c/recordTypes/Non_Veg.recordType-meta.xml
<RecordType>
    <fullName>Non_Veg</fullName>
    <active>true</active>
    <label>Non Veg</label>
</RecordType>