test1/force-app/main/default/objects/Food__c/recordTypes/Veg.recordType-meta.xml
<RecordType>
    <fullName>Veg</fullName>
    <active>true</active>
    <label>Veg</label>
</RecordType>